[tool.poetry]
name = "railml-exporter"
version = "1.0"
description = ""
authors = ["Julian B. <jeriox@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "railml_exporter"}]

[tool.poetry.dependencies]
python = "^3.11"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo", tag = "v1.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
